--- a/styles/index.scss
+++ b/styles/index.scss
@@ -575,7 +575,24 @@ p {
   }
 }
 
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border-radius: 4px;
+  border: none;
+}
+
+.card-img-top {
+  width: 100%;
+}
+
 // TakeActionCarousel Styling Beginning
+
 .take-action-carousel {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
@@ -868,28 +885,6 @@ p {
         margin: 0 auto;
       }
     }
-  }
-
-// Take Action Landing Page Styling
-
-  .ta-category {
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    align-items: center;
-    padding: 8px;
-    margin: 5px;
-    height: 24px;
-    background: #e8e8e8;
-    color: #000000;
-    border-radius: 16px;
-    cursor: pointer;
-    font-size: 12px;
-  }
-
-  .selected {
-    color: #fafaff;
-    background: #f4ac3d;
   }
 }
 
