--- a/styles/takeAction-styles.scss
+++ b/styles/takeAction-styles.scss
@@ -1132,3 +1132,681 @@
     }
   }
 }
+
+// Take Action Landing Page Styling
+
+.actions-title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 116%;
+  color: #2c2d41;
+  margin-bottom: 40px;
+  margin-top: 0;
+}
+
+.actions-grid {
+  display: grid;
+  grid-template-columns: 236px 236px 236px 236px;
+  grid-gap: 10px 15px;
+  padding-bottom: 30px;
+
+  .action-item {
+    min-height: 185px;
+    max-height: 181px;
+    width: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 4px;
+    position: relative;
+    overflow: visible;
+    background-color: rgba(196, 196, 196, 0.8);
+    border: #e8e8e8;
+    border-style: solid;
+    border-color: #e8e8e8;
+    border-width: 0px;
+    word-wrap: break-word;
+    cursor: pointer;
+
+    &.more {
+      background-image: url("../assets/images/soon.jpg");
+
+      .action-title {
+        position: static;
+        height: auto;
+        background-color: transparent;
+        font-size: 18px;
+        line-height: 120%;
+        margin-top: 34px;
+        text-align: center;
+      }
+    }
+
+    .action-title {
+      height: 36%;
+      width: 100%;
+      position: absolute;
+      top: 65%;
+      left: 0;
+      padding: 5px 10px;
+      background-color: rgba(255, 255, 255, 0.9);
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: baseline;
+      border-style: solid;
+      border-radius: 0 0 4px 4px;
+      border-color: #e8e8e8;
+      border-width: 1px;
+      bottom: 0;
+      background: #ffffff;
+
+      .action-title-name {
+        width: 88%;
+
+        h4 {
+          height: 11px;
+          font-weight: 700;
+          font-size: 10px;
+          line-height: 12px;
+          color: #226629;
+          margin-top: 5px;
+          margin-bottom: 5px;
+        }
+
+        h2 {
+          line-height: 116%;
+          height: 23px;
+          font-weight: 700;
+          font-size: 12px;
+          color: #2c2d41;
+          margin-top: 5px;
+          margin-bottom: 5px;
+        }
+
+        p {
+          font-weight: 600;
+          font-size: 12px;
+          line-height: 16px;
+          color: #003749;
+          transition: all 0.3s ease;
+          opacity: 0;
+          margin: 0;
+        }
+      }
+
+      .action-title-button {
+        width: 12%;
+
+        a {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+        }
+      }
+
+      .action-button {
+        position: absolute;
+        width: 130px;
+        height: 38px;
+        left: calc(50% - 75px);
+        bottom: 28px;
+
+        a {
+          color: #fafaff;
+          font-size: medium;
+          font-weight: bold;
+          padding: 8px 8px 8px 10px;
+          gap: 10px;
+          width: 32px;
+          height: 32px;
+          left: 395px;
+          top: 0px;
+          background: #f4ac3d;
+          border-radius: 32px;
+          border: white;
+          float: right;
+
+          &:hover {
+            background-color: #61b1ee;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.ta-categories {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+
+  .ta-category {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+    padding: 8px;
+    margin: 5px;
+    height: 24px;
+    background: #e8e8e8;
+    border-radius: 16px;
+    cursor: pointer;
+    font-size: 12px;
+  }
+
+  .selected {
+    color: #fafaff;
+    background: #f4ac3d;
+  }
+}
+
+.parent-pagination {
+  position: relative;
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.landing-page-pagination {
+  display: flex;
+  justify-content: space-between;
+}
+
+.page-numbers {
+  list-style: none;
+  display: flex;
+  min-width: 210px;
+  width: fit-content;
+  justify-content: space-between;
+}
+
+.page-numbers li {
+  padding: 10px;
+  margin: 0 1.5px;
+  font-weight: 700;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: none;
+  font-size: 20px;
+  line-height: 27px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.page-numbers li.active {
+  background-color: #61b1ee;
+  color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+
+.page-numbers li button {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-size: 1.5rem;
+  cursor: pointer;
+  min-width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+
+.page-numbers li button {
+  background-color: #e8e8e8;
+  position: relative;
+  font-size: 12px;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+
+.page-numbers li:hover {
+  background-color: #e8e8e8;
+  color: black;
+  border-radius: 4px;
+  min-width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+
+.page-numbers li button:focus {
+  outline: none;
+}
+
+.circled-arrow-button {
+  color: #fafaff;
+  border: white;
+  gap: 10px;
+  width: 24px;
+  height: 24px;
+  left: 0px;
+  top: 0px;
+  background: #f4ac3d;
+  border-radius: 32px;
+}
+
+.circled-arrow-button:hover {
+  cursor: pointer;
+  background: #61b1ee;
+  fill: #61b1ee;
+}
+
+.ta-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0 40px;
+  border-bottom: 1px solid #000;
+
+  &.no-border {
+    border: none;
+  }
+
+  .ta-content {
+    max-width: 625px;
+    width: 625px;
+
+    .heading {
+      margin-top: 0;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 25px;
+      letter-spacing: 0.04em;
+      color: #2c2d41;
+      margin-bottom: 30px;
+      margin-top: 0;
+    }
+
+    .donate {
+      padding: 13px 22px 13px 21px;
+      background: #ee6161;
+      border-radius: 10px;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 19px;
+      letter-spacing: 1.5px;
+      text-transform: uppercase;
+      color: #ffffff;
+      text-decoration: none;
+      transition: all 0.3s ease;
+
+      &:hover {
+        background: #61b1ee;
+      }
+    }
+  }
+
+  .ta-sidebar {
+    max-width: 300px;
+    width: 300px;
+
+    .subheading {
+      font-size: 18px;
+      line-height: 25px;
+      letter-spacing: 0.04em;
+      margin-top: 0;
+      text-transform: uppercase;
+      color: #2c2d41;
+      font-weight: normal;
+    }
+
+    ul {
+      margin: 0;
+      padding-left: 30px;
+
+      li {
+        a {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 19px;
+          letter-spacing: 0.04em;
+          text-decoration-line: underline;
+          color: #2c2d41;
+        }
+      }
+    }
+  }
+}
+
+.ta-mobile-content {
+  display: grid;
+  padding: 0 40px;
+
+  h2 {
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: normal;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+  }
+
+  p {
+    font-size: 12px;
+    line-height: 16px;
+    color: #2c2d41;
+  }
+
+  .donate {
+    padding: 13px 22px 13px 21px;
+    background: #ee6161;
+    border-radius: 8px;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    vertical-align: middle;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .ta-mobile-sidebar {
+    margin-top: 12px;
+
+    .subheading {
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 19px;
+      letter-spacing: 0.04em;
+      text-decoration-line: underline;
+      text-transform: uppercase;
+      color: #2c2d41;
+
+      .ta-mobile-seemore,
+      .ta-mobile-seeless {
+        svg {
+          margin-left: 5px;
+        }
+      }
+    }
+
+    .ta-mobile-donate-nav {
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 28px;
+      letter-spacing: 0.04em;
+      text-align: left;
+
+      ul {
+        list-style-type: none;
+
+        li {
+          color: #2c2d41;
+        }
+      }
+
+      a {
+        color: #2c2d41;
+
+        &:hover {
+          color: #61b1ee;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1063px) {
+  .container-landing {
+    width: 90%;
+  }
+  .actions-grid {
+    display: grid;
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .parent-pagination {
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .hero-section {
+    height: auto;
+
+    &:after {
+      content: none;
+    }
+  }
+
+  #connect-section {
+    background-color: #dfeffc;
+  }
+
+  #download-section {
+    background-color: #ffce82;
+  }
+
+  .subheading {
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 25px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #2c2d41;
+    margin-top: 0;
+    margin-bottom: 13px;
+  }
+
+  .description {
+    font-size: 12px;
+    line-height: 16px;
+    color: #2c2d41;
+    margin-top: 0;
+    font-weight: normal;
+    margin-bottom: 30px;
+  }
+
+  .ta-section {
+    border: none;
+  }
+
+  #donate-section {
+    margin-top: 40px;
+  }
+
+  .ta-actions {
+    padding: 20px 0;
+    background-color: #ffce82;
+    .action-item.big {
+      .action-title {
+        .action-title-name {
+          h4 {
+            height: auto;
+            line-height: 1;
+          }
+          h2 {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            height: auto;
+          }
+        }
+      }
+    }
+
+    .ta-categories {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: flex-start;
+      flex-wrap: wrap;
+
+      .ta-category {
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+        align-items: center;
+        padding: 8px;
+        margin: 3px;
+        height: 24px;
+        background: #ffffff;
+        border-radius: 16px;
+        cursor: pointer;
+        font-size: 10px;
+      }
+
+      .selected {
+        color: #f4ac3d;
+      }
+    }
+
+    .actions-title {
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 116%;
+      color: #003749;
+      padding: 0 40px;
+      margin-bottom: 15px;
+    }
+
+    .slick-slide {
+      padding: 0 8px;
+    }
+
+    .parent-pagination {
+      align-items: center;
+      justify-content: center;
+
+      .landing-page-pagination {
+        right: auto;
+
+        .page-numbers {
+          padding-left: 0;
+        }
+      }
+    }
+
+    .action-slider-items {
+      .action-slider-item {
+        display: flex;
+        flex-direction: row;
+        margin: 10px;
+        border-radius: 10px;
+        background-color: #fff;
+
+        .action-right {
+          width: 30%;
+
+          img {
+            width: calc(100% + 10px);
+            max-width: calc(100% + 10px);
+            min-height: 100%;
+            max-height: 100%;
+            object-fit: cover;
+            border-radius: 10px 0 0 10px;
+          }
+        }
+
+        .action-left {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          padding: 15px 15px 15px 25px;
+          width: 70%;
+
+          h4 {
+            font-weight: bold;
+            font-size: 10px;
+            line-height: 16px;
+            color: #f4ac3d;
+            margin: 0;
+          }
+
+          h2 {
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 16px;
+            color: #2c2d41;
+            margin-top: 0;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+          }
+
+          p {
+            font-weight: 600;
+            font-size: 8px;
+            line-height: 11px;
+            color: #2c2d41;
+            margin: 0;
+            min-height: 20px;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+          }
+
+          .action-button {
+            a {
+              font-style: normal;
+              font-weight: 700;
+              font-size: 8px;
+              line-height: 11px;
+              text-decoration-line: underline;
+              color: #61b1ee;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .slick-dots.actions-dots {
+    position: static;
+    margin-top: 18px;
+    display: flex;
+    justify-content: center;
+
+    li {
+      padding: 0 !important;
+      height: 12px !important;
+      width: 12px !important;
+
+      button {
+        padding: 0 !important;
+        height: 12px !important;
+        width: 12px !important;
+        background-color: #fff;
+        border-radius: 100%;
+        border: 1px solid #646464;
+
+        &:before {
+          content: none;
+        }
+      }
+
+      &.slick-active {
+        button {
+          background-color: #646464;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 330px) {
+  .ta-mobile-subscribe {
+    ul {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
