--- a/styles/takeAction-styles.scss
+++ b/styles/takeAction-styles.scss
@@ -135,7 +135,7 @@
 
       &.disabled {
         button {
-          // background-color: #f4ac3d;
+          background-color: #f4ac3d;
         }
       }
     }
@@ -1490,12 +1490,17 @@
       text-transform: uppercase;
       color: #2c2d41;
 
-      .ta-mobile-seemore,
-      .ta-mobile-seeless {
-        svg {
-          margin-left: 5px;
-        }
-      }
+      // .ta-mobile-seemore {
+      //   svg {
+      //     margin-left: 5px;
+      //   }
+      // }
+
+      // .ta-mobile-seeless {
+      //   svg {
+      //     margin-left: 5px;
+      //   }
+      // }
     }
 
     .ta-mobile-donate-nav {
